--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.11.2",
+    "chai": "^4.2.0",
     "meteor-node-stubs": "^1.0.1",
     "tailwindcss": "^2.0.2",
     "vue": "^2.6.12",
